<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:background="@drawable/rect_surface_rounded_8"
    >

    <!--FORMS - TITLE-->
    <TextView
        android:id="@+id/tv_form_title_task_name"
        style="@style/Text.SemiBold.14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_name"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_task_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_form_title_task_name"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/txt_ask_task_name"
            android:textAppearance="@style/Text.Regular.14"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!--FORMS - EST POMODORO-->
    <TextView
        android:id="@+id/tv_form_title_task_pomodoro_sessions"
        style="@style/Text.SemiBold.14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/txt_pomodoro_sessions"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_task_name"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_task_pomodoro_sessions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_decrement"
        app:layout_constraintTop_toBottomOf="@id/tv_form_title_task_pomodoro_sessions"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_task_pomodoro_sessions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textAppearance="@style/Text.Regular.14"
            tools:text="20"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_decrement"
        style="?attr/materialIconButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/txt_decrement"
        android:visibility="gone"
        app:icon="@drawable/ic_chevron_down_24"
        app:layout_constraintEnd_toStartOf="@id/btn_increment"
        app:layout_constraintTop_toTopOf="@id/til_task_pomodoro_sessions"
        app:layout_constraintBottom_toBottomOf="@id/til_task_pomodoro_sessions"
        />
    <Button
        android:id="@+id/btn_increment"
        style="?attr/materialIconButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/txt_increment"
        android:visibility="gone"
        app:icon="@drawable/ic_chevron_up_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/til_task_pomodoro_sessions"
        app:layout_constraintBottom_toBottomOf="@id/til_task_pomodoro_sessions"
        />


    <!--FORMS - NOTES-->
    <TextView
        android:id="@+id/tv_form_title_task_notes"
        style="@style/Text.SemiBold.14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/txt_notes"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_task_pomodoro_sessions"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_task_notes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_form_title_task_notes"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_task_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:hint="@string/txt_msg_hint_task_notes"
            android:inputType="textMultiLine"
            android:minLines="2"
            android:textAppearance="@style/Text.Regular.14"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!--FORMS - BUTTONS-->
    <Button
        android:id="@+id/btn_delete"
        style="@style/BaseButton.Filled.Danger.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/txt_delete"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_save"
        app:layout_constraintBottom_toBottomOf="@id/btn_save"
        />
    <Button
        android:id="@+id/btn_cancel"
        style="@style/BaseButton.Outlined.Primary.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/txt_cancel"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/btn_save"
        app:layout_constraintTop_toTopOf="@id/btn_save"
        app:layout_constraintBottom_toBottomOf="@id/btn_save"
        />
    <Button
        android:id="@+id/btn_save"
        style="@style/BaseButton.Filled.Primary.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/txt_save"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_task_notes"
        />

    <!--TASK DETAIL-->
    <TextView
        android:id="@+id/tv_task_name"
        style="@style/Text.SemiBold.16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Task Name"
        />
    <TextView
        android:id="@+id/tv_task_pomodoro_sessions"
        style="@style/Text.Regular.14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnSurface"
        android:drawablePadding="8dp"
        app:drawableStartCompat="@drawable/ic_clock_16_on_surface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_task_name"
        tools:text="3 Pomodoro Sessions"
        />
    <TextView
        android:id="@+id/tv_task_notes"
        style="@style/Text.Regular.14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:background="@drawable/rect_background_rounded_8"
        android:textColor="?attr/colorPrimary"
        android:maxLines="2"
        android:ellipsize="end"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_task_pomodoro_sessions"
        tools:text="This is a sample note. This is a sample note. This is a sample noteThis is a sample noteThis is a sample noteThis is a sample noteThis is a sample noteThis is a sample noteThis is a sample note"
        />
</androidx.constraintlayout.widget.ConstraintLayout>