<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rect_background_rounded_top_8"
    android:padding="16dp"
    >

    <!--TITLE-->
    <TextView
        android:id="@+id/tv_title"
        style="@style/Text.SemiBold.16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_close"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Sample Title"
        />
    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_24_on_background"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_title"
        />

    <!--FORMS - NUMBER-->
    <TextView
        android:id="@+id/tv_form_title_number"
        style="@style/Text.Regular.14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:text="Minutes"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_decrement"
        app:layout_constraintTop_toBottomOf="@id/tv_form_title_number"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textAppearance="@style/Text.Regular.14"
            tools:text="20"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_decrement"
        style="?attr/materialIconButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/txt_decrement"
        android:visibility="gone"
        app:icon="@drawable/ic_chevron_down_24"
        app:layout_constraintEnd_toStartOf="@id/btn_increment"
        app:layout_constraintTop_toTopOf="@id/til_number"
        app:layout_constraintBottom_toBottomOf="@id/til_number"
        />
    <Button
        android:id="@+id/btn_increment"
        style="?attr/materialIconButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/txt_increment"
        android:visibility="gone"
        app:icon="@drawable/ic_chevron_up_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/til_number"
        app:layout_constraintBottom_toBottomOf="@id/til_number"
        />

    <!--FORMS - MULTIPLE CHOICES-->
    <TextView
        android:id="@+id/tv_form_multiple_choices"
        style="@style/Text.Regular.14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:text="App Theme"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_multiple_choices"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_form_multiple_choices"
        >
        <AutoCompleteTextView
            android:id="@+id/ac_multiple_choices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:dropDownSelector="@color/base_chip_background_primary"
            android:popupBackground="@drawable/rect_background_rounded_8"
            tools:ignore="LabelFor"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!--BUTTON - SUBMIT-->
    <Button
        android:id="@+id/btn_submit"
        style="@style/BaseButton.Filled.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_number"
        />

</androidx.constraintlayout.widget.ConstraintLayout>